--- a/src/main/resources/com/example/insurance/hello-view.fxml
+++ b/src/main/resources/com/example/insurance/hello-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" scaleShape="false" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
+<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
    <children>
       <AnchorPane maxHeight="1080.0" maxWidth="1.7976931348623157E308" prefHeight="66.0" style="-fx-background-color: white;">
          <children>
@@ -55,7 +55,7 @@
                               <Image url="@HouseInsurance.png" />
                            </image></ImageView>
                      </children></VBox>
-                  <VBox id="VboxWithBorder" fx:id="vboxWithBorder" prefHeight="551.0" prefWidth="845.0" style="-fx-border-color: #301c94; -fx-background-color: linear-gradient(to bottom left,#301c94 53%,  #b0c4de 47% ); -fx-border-width: 5px;" styleClass="vboxWithBorder" HBox.hgrow="ALWAYS">
+                  <VBox id="VboxWithBorder" fx:id="vboxWithBorder" prefHeight="551.0" prefWidth="845.0" style="-fx-border-color: #301c94; -fx-background-color: linear-gradient(to bottom left,#301c94 50%,  #b0c4de 50% ); -fx-border-width: 5px;" styleClass="vboxWithBorder" HBox.hgrow="ALWAYS">
                      <children>
                         <GridPane fx:id="GridPanel" prefHeight="370.0" prefWidth="693.0">
                           <columnConstraints>
@@ -86,11 +86,6 @@
                                     <Font size="14.0" />
                                  </font>
                               </TextField>
-                              <Label alignment="CENTER" contentDisplay="CENTER" style="-fx-background-color: null;" textAlignment="CENTER" GridPane.columnSpan="3" GridPane.rowSpan="3">
-                                 <GridPane.margin>
-                                    <Insets left="350.0" />
-                                 </GridPane.margin>
-                              </Label>
                               <TextField promptText="Имя" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: NULL;-fx-prompt-text-fill: black;">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
@@ -126,7 +121,7 @@
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </DatePicker>
-                              <PasswordField promptText="Еще рах пароль" style="-fx-border-width: 4px; -fx-border-color: linear-gradient(to bottom left, #b0c4de 30%,   #301c94  70% );-fx-prompt-text-fill: black;-fx-background-color: NULL;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                              <PasswordField promptText="Еще раз пароль" style="-fx-border-width: 4px; -fx-border-color: linear-gradient(to bottom left, #b0c4de 30%,   #301c94  70% );-fx-prompt-text-fill: black;-fx-background-color: NULL;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="60.0" right="20.0" />
                                  </GridPane.margin>
@@ -154,13 +149,19 @@
                                  <font>
                                     <Font size="14.0" />
                                  </font></Button>
-                              <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" style="-fx-text-fill: #b0c4de;" text="Сотрудник" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                              <TextField onMouseExited="#DownTip" onMouseMoved="#UpTip" promptText="Код сотрудника" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #b0c4de; -fx-text-fill: #b0c4de; -fx-background-color: NULL;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font></CheckBox>
+                              </TextField>
+                              <Label fx:id="thinkaboutcode" style="-fx-text-fill: #b0c4de;" text="Если вы сотрудник компании" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                 <cursor>
+                                    <Cursor fx:constant="NONE" />
+                                 </cursor>
+                                 <GridPane.margin>
+                                    <Insets bottom="50.0" left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </Label>
                            </children>
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" top="100.0" />
