--- a/src/main/resources/com/example/insurance/SignUp.fxml
+++ b/src/main/resources/com/example/insurance/SignUp.fxml
@@ -10,7 +10,7 @@
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #b0c4de;">
          <children>
-            <HBox prefHeight="74.0" prefWidth="1280.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <HBox prefHeight="74.0" prefWidth="1280.0" style="-fx-background-color: linear-gradient(to top left #301c94 50% ,#b0c4de 50% );" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Label text="UNIONINSURANCE" textFill="#3e2a5b">
                      <font>
@@ -36,24 +36,80 @@
       </AnchorPane>
       <AnchorPane prefHeight="436.0" prefWidth="827.0">
          <children>
-            <HBox prefHeight="641.0" prefWidth="1288.0">
+            <HBox prefHeight="641.0" prefWidth="1288.0" style="-fx-background-color: white;">
                <children>
-                  <VBox prefHeight="641.0" prefWidth="200.0" />
-                  <GridPane prefHeight="541.0" prefWidth="663.0" style="-fx-background-color: #b0c4de;">
+                  <VBox prefHeight="641.0" prefWidth="275.0">
+                     <children>
+                        <ImageView fitHeight="231.0" fitWidth="223.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@LoginIcons2.png" />
+                           </image>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin>
+                        </ImageView>
+                        <ImageView fitHeight="248.0" fitWidth="218.0" onMouseEntered="#UpTip" onMouseExited="#DownTip" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@LoginIcons.png" />
+                           </image>
+                           <VBox.margin>
+                              <Insets left="50.0" top="60.0" />
+                           </VBox.margin></ImageView>
+                        <Label fx:id="thinkaboutInsurance" prefHeight="150.0" prefWidth="415.0" style="-fx-opacity: 0;" text="Страхование Вашей жизни,&#10;Автомобиля и недвижимости!&#10;" textAlignment="CENTER">
+                           <graphic>
+                              <ImageView fitHeight="75.0" fitWidth="107.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@BlueideaLamp.png" />
+                                 </image></ImageView>
+                           </graphic>
+                        </Label>
+                     </children></VBox>
+                  <GridPane prefHeight="441.0" prefWidth="486.0" style="-fx-background-color: linear-gradient(to bottom left,#301c94 50%,  #b0c4de 50% ); -fx-border-color: #301c94; -fx-border-width: 5px;">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="645.0" minWidth="10.0" prefWidth="431.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="468.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="645.0" minWidth="10.0" prefWidth="22.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="589.0" minWidth="10.0" prefWidth="589.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="134.0" minHeight="10.0" prefHeight="134.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="287.0" minHeight="10.0" prefHeight="287.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="134.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="134.0" minHeight="10.0" prefHeight="97.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="360.0" minHeight="10.0" prefHeight="252.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <HBox.margin>
-                        <Insets bottom="41.0" left="100.0" right="100.0" top="100.0" />
+                        <Insets bottom="100.0" left="155.0" right="100.0" top="100.0" />
                      </HBox.margin>
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="148.0" style="-fx-background-color: null; -fx-border-color: linear-gradient(to bottom left,#b0c4de 30% ,  #301c94 30% ); -fx-border-width: 4px;" text="Войти" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets bottom="70.0" left="160.0" />
+                           </GridPane.margin></Button>
+                        <TextField prefHeight="40.0" prefWidth="203.0" promptText="Электронная почта" style="-fx-border-color: #b0c4de; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="140.0" right="120.0" />
+                           </GridPane.margin></TextField>
+                        <TextField prefHeight="40.0" prefWidth="203.0" promptText="Пароль" style="-fx-border-color: #b0c4de; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="140.0" right="120.0" />
+                           </GridPane.margin></TextField>
+                     </children>
                   </GridPane>
-                  <VBox prefHeight="641.0" prefWidth="200.0" />
+                  <VBox prefHeight="641.0" prefWidth="280.0">
+                     <children>
+                        <ImageView fitHeight="269.0" fitWidth="204.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@LoginIcon3.png" />
+                           </image>
+                           <VBox.margin>
+                              <Insets left="50.0" top="125.0" />
+                           </VBox.margin></ImageView>
+                        <Label prefHeight="117.0" prefWidth="250.0" text="Преимущества компании:&#10;1. Надежность&#10;2. Экономия денег и времени&#10;3. Быстрые выплаты&#10;" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
+                           <font>
+                              <Font name="Times New Roman" size="17.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="-30.0" />
+                           </VBox.margin></Label>
+                     </children></VBox>
                </children></HBox>
          </children></AnchorPane>
    </children>
