--- a/src/main/resources/com/example/insurance/hello-view.fxml
+++ b/src/main/resources/com/example/insurance/hello-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" scaleShape="false" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
+<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
    <children>
       <AnchorPane maxHeight="1080.0" maxWidth="1.7976931348623157E308" prefHeight="66.0" style="-fx-background-color: white;">
          <children>
@@ -70,7 +70,7 @@
                               <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="102.0" vgrow="ALWAYS" />
                           </rowConstraints>
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="291.0" promptText="Фамилия" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-background-color: white; -fx-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.valignment="CENTER">
+                              <TextField fx:id="Surname" prefHeight="25.0" prefWidth="291.0" promptText="Фамилия" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-background-color: white; -fx-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.valignment="CENTER">
                                  <GridPane.margin>
                                     <Insets left="60.0" right="20.0" />
                                  </GridPane.margin>
@@ -86,7 +86,7 @@
                                     <Font size="14.0" />
                                  </font>
                               </TextField>
-                              <TextField promptText="Имя" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: white; -fx-prompt-text-fill: black;">
+                              <TextField fx:id="Name" promptText="Имя" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: white; -fx-prompt-text-fill: black;">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
@@ -94,7 +94,7 @@
                                     <Font size="14.0" />
                                  </font>
                               </TextField>
-                              <TextField prefHeight="24.0" prefWidth="131.0" promptText="Отчество" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-background-color: white; -fx-text-fill: #301c94;" GridPane.columnIndex="2">
+                              <TextField fx:id="LastName" prefHeight="24.0" prefWidth="131.0" promptText="Отчество" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-background-color: white; -fx-text-fill: #301c94;" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
@@ -105,7 +105,7 @@
                                     <Font size="14.0" />
                                  </font>
                               </TextField>
-                              <TextField promptText="email" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-text-fill: #301c94; -fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                              <TextField fx:id="email" promptText="email" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-text-fill: #301c94; -fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
@@ -121,7 +121,7 @@
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </DatePicker>
-                              <PasswordField promptText="Еще раз пароль" style="-fx-border-width: 4px; -fx-border-color: linear-gradient(to bottom left, #b0c4de 30%,   #301c94  70% ); -fx-prompt-text-fill: #301c94; -fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                              <PasswordField fx:id="Password1" promptText="Еще раз пароль" style="-fx-border-width: 4px; -fx-border-color: linear-gradient(to bottom left, #b0c4de 30%,   #301c94  70% ); -fx-prompt-text-fill: #301c94; -fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="60.0" right="20.0" />
                                  </GridPane.margin>
@@ -129,7 +129,7 @@
                                     <Font size="14.0" />
                                  </font>
                               </PasswordField>
-                              <PasswordField promptText="Пароль" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-prompt-text-fill: #301c94; -fx-background-color: white; -fx-text-fill: #301c94;" GridPane.rowIndex="2">
+                              <PasswordField fx:id="Password" promptText="Пароль" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-prompt-text-fill: #301c94; -fx-background-color: white; -fx-text-fill: #301c94;" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
@@ -145,11 +145,11 @@
                                     <Font size="14.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="106.0" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: null;" text="Регистрация" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                              <Button mnemonicParsing="false" onAction="#TryLogIn" prefHeight="38.0" prefWidth="106.0" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: null;" text="Регистрация" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                  <font>
                                     <Font size="14.0" />
                                  </font></Button>
-                              <TextField onMouseExited="#DownTip" onMouseMoved="#UpTip" promptText="Код сотрудника" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-text-fill: #301c94; -fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                              <TextField fx:id="EmployeeCode" onMouseExited="#DownTip" onMouseMoved="#UpTip" promptText="Код сотрудника" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #301c94; -fx-text-fill: #301c94; -fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
