--- a/src/main/resources/com/example/insurance/MainMenu.fxml
+++ b/src/main/resources/com/example/insurance/MainMenu.fxml
@@ -1,12 +1,14 @@
-    <?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <?import javafx.geometry.*?>
-    <?import javafx.scene.control.*?>
-    <?import javafx.scene.image.*?>
-    <?import javafx.scene.layout.*?>
-    <?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-    <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.MainMenuController">
+<!--suppress ALL -->
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.MainMenuController">
         <top>
             <Pane prefHeight="96.0" prefWidth="1280.0" visible="false" BorderPane.alignment="CENTER" />
         </top>
@@ -71,11 +73,11 @@
                             </AnchorPane>
                         </content>
                     </Tab>
-                    <Tab onSelectionChanged="#getDescriptonOfInsuranceTypeForAuto" style="-fx-background-color: NULL;">
+                    <Tab fx:id="autoTab" onSelectionChanged="#onTabSelectionChanged" style="-fx-background-color: NULL;">
                         <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
                                 <children>
-                                    <Label fx:id="Description" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="12.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+                                    <Label fx:id="Description_auto" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="45.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
                                         <font>
                                             <Font name="Cascadia Code Regular" size="12.0" />
                                         </font>
@@ -140,26 +142,26 @@
                                                     <Font name="Cascadia Code Regular" size="12.0" />
                                                 </font>
                                             </Button>
-                                            <Label fx:id="totalPrice" prefHeight="34.0" prefWidth="193.0" style="-fx-border-color: #301c94; -fx-border-width: 4px;" text="Итоговая стоимость:" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                            <Label fx:id="totalPrice_auto" prefHeight="34.0" prefWidth="193.0" style="-fx-border-color: #301c94; -fx-border-width: 4px;" text="Итоговая стоимость:" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                                 <GridPane.margin>
                                                     <Insets left="50.0" right="50.0" />
                                                 </GridPane.margin>
                                             </Label>
-                                  <TextField fx:id="term" onMouseExited="#checkDataForTerm" promptText="Количество дней" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.rowIndex="1">
+                                  <TextField fx:id="term_auto" onMouseExited="#checkDataForTerm" promptText="Количество дней" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </TextField>
-                                  <TextField fx:id="coverage" layoutX="65.0" layoutY="210.0" onMouseExited="#checkDataForCoverage" promptText="Страховое покрытие" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                  <TextField fx:id="coverage_auto" layoutX="65.0" layoutY="210.0" onMouseExited="#checkDataForCoverage" promptText="Страховое покрытие" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin></TextField>
-                                  <Label fx:id="TipForterm" prefHeight="35.0" prefWidth="194.0" text="Label" visible="false" GridPane.rowIndex="1">
+                                  <Label fx:id="TipForterm_auto" prefHeight="35.0" prefWidth="194.0" text="Label" visible="false" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" top="70.0" />
                                      </GridPane.margin>
                                   </Label>
-                                  <Label fx:id="TipForCoverage" layoutX="65.0" layoutY="244.0" prefHeight="35.0" prefWidth="194.0" text="Label" textFill="#683232" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                  <Label fx:id="TipForCoverage_auto" layoutX="65.0" layoutY="244.0" prefHeight="35.0" prefWidth="194.0" text="Label" textFill="#683232" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" top="70.0" />
                                      </GridPane.margin>
@@ -176,11 +178,11 @@
                             </ImageView>
                         </graphic>
                     </Tab>
-                <Tab onSelectionChanged="#getDescriptonOfInsuranceTypeForLife" style="-fx-background-color: NULL;">
+                <Tab fx:id="lifeTab" onSelectionChanged="#onTabSelectionChanged" style="-fx-background-color: NULL;">
                    <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
                          <children>
-                            <Label fx:id="Description" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="31.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+                            <Label fx:id="Description_life" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="31.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
                                <font>
                                   <Font name="Cascadia Code Regular" size="12.0" />
                                </font>
@@ -245,27 +247,27 @@
                                         <Font name="Cascadia Code Regular" size="12.0" />
                                      </font>
                                   </Button>
-                                  <Label fx:id="totalPrice" prefHeight="34.0" prefWidth="193.0" style="-fx-border-color: #301c94; -fx-border-width: 4px;" text="Итоговая стоимость:" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                  <Label fx:id="totalPrice_life" prefHeight="34.0" prefWidth="193.0" style="-fx-border-color: #301c94; -fx-border-width: 4px;" text="Итоговая стоимость:" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </Label>
-                                  <TextField fx:id="term" onMouseExited="#checkDataForTerm" promptText="Количество дней" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.rowIndex="1">
+                                  <TextField fx:id="term_life" onMouseExited="#checkDataForTerm" promptText="Количество дней" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </TextField>
-                                  <TextField fx:id="coverage" layoutX="65.0" layoutY="210.0" onMouseExited="#checkDataForCoverage" promptText="Страховое покрытие" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                  <TextField fx:id="coverage_life" layoutX="65.0" layoutY="210.0" onMouseExited="#checkDataForCoverage" promptText="Страховое покрытие" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </TextField>
-                                  <Label fx:id="TipForterm" prefHeight="35.0" prefWidth="194.0" text="Label" visible="false" GridPane.rowIndex="1">
+                                  <Label fx:id="TipForterm_life" prefHeight="35.0" prefWidth="194.0" text="Label" visible="false" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" top="70.0" />
                                      </GridPane.margin>
                                   </Label>
-                                  <Label fx:id="TipForCoverage" layoutX="65.0" layoutY="244.0" prefHeight="35.0" prefWidth="194.0" text="Label" textFill="#683232" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                  <Label fx:id="TipForCoverage_life" layoutX="65.0" layoutY="244.0" prefHeight="35.0" prefWidth="194.0" text="Label" textFill="#683232" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" top="70.0" />
                                      </GridPane.margin>
@@ -283,11 +285,11 @@
                       </ImageView>
                    </graphic>
                 </Tab>
-                <Tab onSelectionChanged="#getDescriptonOfInsuranceTypeForHouse" style="-fx-background-color: NULL;">
+                <Tab fx:id="houseTab" onSelectionChanged="#onTabSelectionChanged" style="-fx-background-color: NULL;">
                    <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
                          <children>
-                            <Label fx:id="Description" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="30.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+                            <Label fx:id="Description_house" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="30.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
                                <font>
                                   <Font name="Cascadia Code Regular" size="12.0" />
                                </font>
@@ -352,27 +354,27 @@
                                         <Font name="Cascadia Code Regular" size="12.0" />
                                      </font>
                                   </Button>
-                                  <Label fx:id="totalPrice11" prefHeight="34.0" prefWidth="193.0" style="-fx-border-color: #301c94; -fx-border-width: 4px;" text="Итоговая стоимость:" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                  <Label fx:id="totalPrice_house" prefHeight="34.0" prefWidth="193.0" style="-fx-border-color: #301c94; -fx-border-width: 4px;" text="Итоговая стоимость:" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </Label>
-                                  <TextField fx:id="term11" onMouseExited="#checkDataForTerm" promptText="Количество дней" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.rowIndex="1">
+                                  <TextField fx:id="term_house" onMouseExited="#checkDataForTerm" promptText="Количество дней" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </TextField>
-                                  <TextField fx:id="coverage11" layoutX="65.0" layoutY="210.0" onMouseExited="#checkDataForCoverage" promptText="Страховое покрытие" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                  <TextField fx:id="coverage_house" layoutX="65.0" layoutY="210.0" onMouseExited="#checkDataForCoverage" promptText="Страховое покрытие" style="-fx-border-color: #301c94; -fx-background-color: white; -fx-border-width: 4px; -fx-prompt-text-fill: #301c94;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" right="50.0" />
                                      </GridPane.margin>
                                   </TextField>
-                                  <Label fx:id="TipForterm11" prefHeight="35.0" prefWidth="194.0" text="Label" visible="false" GridPane.rowIndex="1">
+                                  <Label fx:id="TipForterm_house" prefHeight="35.0" prefWidth="194.0" text="Label" visible="false" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" top="70.0" />
                                      </GridPane.margin>
                                   </Label>
-                                  <Label fx:id="TipForCoverage11" layoutX="65.0" layoutY="244.0" prefHeight="35.0" prefWidth="194.0" text="Label" textFill="#683232" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                  <Label fx:id="TipForCoverage_house" layoutX="65.0" layoutY="244.0" prefHeight="35.0" prefWidth="194.0" text="Label" textFill="#683232" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                      <GridPane.margin>
                                         <Insets left="50.0" top="70.0" />
                                      </GridPane.margin>
